# rhym

./: pyproject.toml
rhym/: __init__.py  wrapper.py
tests/: test_rhym.py
