[tool.poetry]
name = "rhym"
version = "0.1.0"
description = "a virtualenv wrapper to poetry"
authors = ["jgirardet <ijkl@netc.fr>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
poetry = "^0.12"

[tool.poetry.scripts]
rhym = "rhym.wrapper:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
